# top-k-trajectory-query

./: .gitignore  CMakeLists.txt  CS1.proto  CS1_and_CS2.proto  CloudServer1.cc  CloudServer2.cc  Cryption_Code.cc  DO_and_CS1.proto  DO_and_CS2.proto  DO_and_QU.proto  DOserver.cc  DSED.cc  DataOwner.cc  Douglas_Peucker.cc  Preliminarie.cc  Proxy_Re-Encryption.cc  Proxy_ReEncryption.cc  QU_and_CS1.proto  QUclient.cc  QueryUser.cc  README.md  SHE_Encryption.cc  SHE_encrypt.cpp  base.h  data.txt  extend.cc  function_declaration.h  generate_key.cc  hilbertcurve.cc  main.cc  makefile  sort.cc  testdata.txt
helloworld/: build.gradle
helloworld/app/: build.gradle
helloworld/app/src/main/: AndroidManifest.xml
helloworld/app/src/main/cpp/: CMakeLists.txt  grpc_app.cpp  hilbertcurve.cpp
helloworld/app/src/main/java/io/grpc/helloworldexample/: Cap.java  Cryptopp.java  EncodePoint.java  HelloworldActivity.java  Info.java  InfoDao.java  InfoDataBase.java  InfoRepository.java  InfoViewModel.java  LoginActivity.java  MyPoint.java  Phi.java  ReturnMess.java  SendMessage.java  SignUpActivity.java
helloworld/app/src/main/proto/: QUCS1.proto  helloworld.proto
helloworld/app/src/main/res/layout/: activity_helloworld.xml  content_main.xml  login.xml  signup.xml
helloworld/app/src/main/res/values/: strings.xml
